--- a/Frontend/ElectronViteGUI/package.json
+++ b/Frontend/ElectronViteGUI/package.json
@@ -24,7 +24,8 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "chart.js": "^4.4.8",
-    "electron-updater": "^6.3.9"
+    "electron-updater": "^6.3.9",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
