--- a/Frontend/ElectronViteGUI/package.json
+++ b/Frontend/ElectronViteGUI/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "air-datepicker": "^3.5.3",
     "chart.js": "^4.4.8",
     "electron-updater": "^6.3.9",
     "sqlite3": "^5.1.7"
