--- a/Frontend/ElectronViteGUI/.gitignore
+++ b/Frontend/ElectronViteGUI/.gitignore
@@ -31,3 +31,39 @@ yarn.lock
 /test-results/
 /playwright-report/
 /playwright/.cache/
+
+# Node modules
+node_modules/
+
+# Build artifacts
+dist/
+out/
+build/
+
+# Vite specific
+.vite/
+.env.local
+.env.*.local
+
+# Electron specific
+# Electron Forge, Builder, etc. output directories
+release/
+packed/
+# macOS specific
+*.DS_Store
+# Windows specific
+thumbs.db
+# Linux specific
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE specific files (optional)
+.vscode/
+.idea/
+
+# Editor specific files (optional)
+*.swp
+*.bak
+*~
