--- a/Frontend/ElectronViteGUI/package.json
+++ b/Frontend/ElectronViteGUI/package.json
@@ -23,6 +23,10 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "air-datepicker": "^3.5.3",
     "chart.js": "^4.4.8",
     "electron-updater": "^6.3.9",
