--- a/ProcessaDados/ProcessaDados.App/ProcessaDados.App.csproj
+++ b/ProcessaDados/ProcessaDados.App/ProcessaDados.App.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.4.1-beta.506" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
